# sdl2-rust-android-test

./: Cargo.toml  README  README.md  build.sh
.cargo/: config.toml
src/: lib.rs  main.rs
src/game/: mod.rs  my_game.rs  my_scene.rs
