[package]
name = "sdl-test"
version = "0.1.0"
edition = "2021"
authors = ["yogi astawan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36.0"
bevy_ecs = "0.13.0"

[lib]
name = "sdl_rust_test"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = "symbols"
codegen-units = 1

[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
codegen-units = 1
